# Astrobiology

./: Cargo.toml  LICENSE  README.md
src/: galaxy_generator.rs  game_manager.rs  gui.rs  main.rs  organism_generator.rs  planet_generator.rs  planetary_environment_generator.rs  planetary_system_generator.rs  star_generator.rs  state_machine.rs
ui/: gui.slint
