[package]
name = "astrobiology"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24"
strum_macros = "0.24"
rand = "0.8"
rand_derive2 = "0.1"
lazy_static = "1.4.0"
piston_window = "0.128.0"
find_folder = "0.3.0"
textwrap = "0.16.0"
slint = "1.0.0"